--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "reactjs-percentage-circle": "^1.0.0",
     "recharts": "^2.1.9",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
