--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,20 +4,26 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-flickity-component": "^3.6.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "reactjs-percentage-circle": "^1.0.0",
     "recharts": "^2.1.9",
     "slick-carousel": "^1.8.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
