--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prerender-node": "^3.4.2"
   }
 }
